Fix reading resource from classpath